--- a/src/components/sorting-page/sorting-page.module.css
+++ b/src/components/sorting-page/sorting-page.module.css
@@ -1,10 +1,7 @@
-.content {
-
-}
-
 .controlBox {
     display: flex;
-    gap: 20px
+    justify-content: space-around;
+    margin-bottom: 48px;
 }
 
 .imageBox {
@@ -12,4 +9,15 @@
     justify-content: center;
     align-items: end;
     gap: 10px;
+}
+
+.selectors {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+
+.sort {
+    display: flex;
+    gap: 12px;
 }
