feat: Доработана верстка и ограничение ввода

--- a/src/components/queue-page/queue-page.module.css
+++ b/src/components/queue-page/queue-page.module.css
@@ -1,7 +1,12 @@
 .controlBox {
     display: flex;
+    justify-content: center;
     gap: 12px;
-    margin: 0 96px 48px;
+    margin: 0 96px 48px;    
+}
+
+.inputBox {
+    min-width: 377px;
 }
 
 .clear {
