--- a/src/components/queue-page/queue-page.module.css
+++ b/src/components/queue-page/queue-page.module.css
@@ -6,6 +6,12 @@
 }
 
 .inputBox {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.input {
     min-width: 377px;
 }
 
