--- a/src/components/stack-page/stack-page.module.css
+++ b/src/components/stack-page/stack-page.module.css
@@ -1,7 +1,18 @@
 .controlBox {
     display: flex;
+    justify-content: center;
     gap: 12px;
     margin: 0 96px 48px;
+}
+
+.inputBox {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.input {
+    min-width: 377px;
 }
 
 .clear {
